--- a/ActorModel.Tests/ActorModel.Tests.csproj
+++ b/ActorModel.Tests/ActorModel.Tests.csproj
@@ -53,6 +53,12 @@
     <PackageReference Include="Akka.TestKit.Xunit2">
       <Version>1.3.0</Version>
     </PackageReference>
+    <PackageReference Include="FluentAssertions">
+      <Version>4.19.4</Version>
+    </PackageReference>
+    <PackageReference Include="Moq">
+      <Version>4.7.99</Version>
+    </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.2.0</Version>
     </PackageReference>
@@ -67,6 +73,10 @@
     <ProjectReference Include="..\ActorModel\ActorModel.csproj">
       <Project>{D47AEBB1-24D8-4D6F-A4C8-E7319D2CDACB}</Project>
       <Name>ActorModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ChatServerInfraStructure\ChatServerInfraStructure.csproj">
+      <Project>{B0A4C7B0-BFBF-44F4-AFEE-38204DB59AFE}</Project>
+      <Name>ChatServerInfraStructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
