--- a/ActorModel/ActorModel.csproj
+++ b/ActorModel/ActorModel.csproj
@@ -48,5 +48,11 @@
       <Version>1.3.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ChatServerInfraStructure\ChatServerInfraStructure.csproj">
+      <Project>{B0A4C7B0-BFBF-44F4-AFEE-38204DB59AFE}</Project>
+      <Name>ChatServerInfraStructure</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
