--- a/ChatServerHost/ChatServerHost.csproj
+++ b/ChatServerHost/ChatServerHost.csproj
@@ -52,11 +52,18 @@
     <PackageReference Include="Akka">
       <Version>1.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Akka.DI.Ninject">
+      <Version>1.1.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ActorModel\ActorModel.csproj">
       <Project>{D47AEBB1-24D8-4D6F-A4C8-E7319D2CDACB}</Project>
       <Name>ActorModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ChatServerInfraStructure\ChatServerInfraStructure.csproj">
+      <Project>{B0A4C7B0-BFBF-44F4-AFEE-38204DB59AFE}</Project>
+      <Name>ChatServerInfraStructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
