--- a/ActorModel/ActorModel.csproj
+++ b/ActorModel/ActorModel.csproj
@@ -41,7 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelloActor.cs" />
+    <Compile Include="Messages\AllUsers.cs" />
+    <Compile Include="Messages\Commands\CreateUser.cs" />
+    <Compile Include="Messages\Requests\ListAllUsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserManagerActor.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Akka">
@@ -53,6 +57,9 @@
       <Project>{B0A4C7B0-BFBF-44F4-AFEE-38204DB59AFE}</Project>
       <Name>ChatServerInfraStructure</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Messages\Events\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
