--- a/ActorModel/ActorModel.csproj
+++ b/ActorModel/ActorModel.csproj
@@ -41,10 +41,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelloActor.cs" />
+    <Compile Include="Messages\AllRooms.cs" />
     <Compile Include="Messages\AllUsers.cs" />
+    <Compile Include="Messages\Commands\CreateRoom.cs" />
     <Compile Include="Messages\Commands\CreateUser.cs" />
+    <Compile Include="Messages\Requests\ListAllRooms.cs" />
     <Compile Include="Messages\Requests\ListAllUsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoomActor.cs" />
+    <Compile Include="RoomManagerActor.cs" />
     <Compile Include="UserManagerActor.cs" />
   </ItemGroup>
   <ItemGroup>
