Removed ninject, added remoting, moved roommanger to remote host

--- a/ChatServerHost/App.config
+++ b/ChatServerHost/App.config
@@ -13,6 +13,20 @@
       <![CDATA[ akka { 
         loglevel = Info 
         suppress-json-serializer-warning = on
+        actor{
+                    provider = remote
+                    deployment {
+                        /RoomManager {
+                            remote = "akka.tcp://MyChatServer@localhost:8090"
+                        }
+                    }
+                }
+                remote {
+                    dot-netty.tcp {
+                        port = 0
+                        hostname = localhost
+                    }
+                }
         } 
         ]]>
     </hocon>
