--- a/ChatServerHost/ChatServerHost.csproj
+++ b/ChatServerHost/ChatServerHost.csproj
@@ -50,10 +50,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Akka">
-      <Version>1.3.0</Version>
+      <Version>1.3.1</Version>
     </PackageReference>
-    <PackageReference Include="Akka.DI.Ninject">
-      <Version>1.1.1</Version>
+    <PackageReference Include="Akka.Remote">
+      <Version>1.3.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
